feat: Remove VO from request and response parameter names in the server module.